# mazu-sim

./: .clang-format  .gitignore  .gitmodules  Doxyfile  LICENSE  Makefile  README.md  loop_build.sh  loop_modules_build.sh  loop_sim_exe_build.sh  makefile  modules-path.mk  modules-path_var.mk  run_sim.sh  run_sim_error_check.sh  sim_exe-path.mk  trick_deep_clean.sh
conf/dcmbus/: dcm_bind.cfg  dcm_channel.cfg  dcm_client.cfg  dcm_client_bind.cfg  dcm_client_ring.cfg  dcm_ring.cfg  dcm_sample.cfg
conf/http3a_conf/: dcm_client_ring.cfg
conf/sample_conf/: dcm_client_channel.cfg  dcm_ring.cfg  dcm_sample.yaml
conf/skyline_conf/: dcm_bind.cfg  dcm_channel.cfg
models/dm_fsw_interface/: dataflow_binding.hh  dataflow_binding_sheipa.hh  packet_format.h
models/http3a_input/: data_record_fsw.h  data_record_golden.h  jit_utils.h
models/jit_input/: data_record_fsw.h  data_record_golden.h  data_record_gps.h  dm_init_sequence.h  fsw_init_sequence.h  gps.h
models/sheipa_input/: dm_init_sequence.h
models/skyline_input/: dm_init_sequence.h  fsw_init_sequence.h  mission_events_define.h
module/hello_world/: hello.h  makefile
modules/actuator_dm/: CMakeLists.txt  Makefile  makefile  tvc.cpp  tvc.hh
modules/actuator_dm/include/: rcs.hh  tvc.hh
modules/actuator_dm/src/: rcs.cpp  tvc.cpp
modules/aero_dynamic/: makefile
modules/cadac/: CMakeLists.txt  body.cpp  body.hh  cadac_util.hh  component.cpp  component.hh  datadeck.cpp  datadeck.hh  joint.cpp  joint.hh  makefile  module.hh  schmitt_trigger.cpp  schmitt_trigger.hh  signal_process.cpp  time_management.cpp  time_management.hh  time_util.cpp  vehicle.cpp  vehicle.hh  vehicle_var.cpp  vehicle_var.hh
modules/cadac/env/: atmosphere.hh  atmosphere76.cpp  atmosphere76.hh  atmosphere_nasa2002.cpp  atmosphere_nasa2002.hh  atmosphere_weatherdeck.cpp  atmosphere_weatherdeck.hh  wind.cpp  wind.hh  wind_constant.cpp  wind_constant.hh  wind_no.cpp  wind_no.hh  wind_tabular.cpp  wind_tabular.hh
modules/cadac/include/: Body.hh  Dynamics_System.hh  Joint.hh  aux.hh  body.hh  cadac_constants.hh  cadac_util.hh  component.hh  datadeck.hh  schmitt_trigger.hh  signal_process.hh  singleton.hh  time_management.hh  time_util.hh  vehicle.hh  vehicle_var.hh
modules/cadac/include/env/: atmosphere76.hh  atmosphere_weatherdeck.hh  wind.hh  wind_constant.hh  wind_no.hh  wind_tabular.hh
modules/cadac/src/: Body.cpp  Dynamics_System.cpp  Joint.cpp  body.cpp  cadac_util.cpp  component.cpp  schmitt_trigger.cpp  time_management.cpp  time_util.cpp  vehicle.cpp  vehicle_var.cpp
modules/cadac/src/env/: atmosphere76.cpp  atmosphere_nasa2002.cpp  atmosphere_weatherdeck.cpp  wind.cpp  wind_constant.cpp  wind_no.cpp  wind_tabular.cpp
modules/config_util/: config_util.c  config_util.h  makefile
modules/dcm_bus/: dcm_bus.cpp  dcm_bus.hh  makefile
modules/dcmbus/: dcmbus.c  dcmbus.h  dcmbus_driver.h  dcmbus_driver_intf.c  dcmbus_driver_intf.h  dcmbus_linux_header.h  dcmbus_util.c  dcmbus_util.h  ethernet.c  ethernet.h  linux_common.h  makefile  non_blocking_io.c  non_blocking_io.h
modules/dynamic_model/: Body.cpp  Body.hpp  Component.cpp  Component.hh  Dynamics_System.cpp  Dynamics_System.hpp  Joint.cpp  Joint.hpp  aerodynamics.cpp  aerodynamics.hh  aux.hh  dm_exec.cpp  dm_exec.hh  earth_environment.cpp  earth_environment.hh  global_constants.hh  makefile  propulsion.cpp  propulsion.hh  rcs.cpp  rcs.hh  rocket_flight_dm.cpp  rocket_flight_dm.hh  signal_process.hh  time_management.cpp  time_management.hh  time_util.cpp  time_util.hh  tvc.hh  vehicle.hh  vehicle_var.cpp
modules/gnc/: control.cpp  control.hh  guidance.cpp  guidance.hh  ins.cpp  ins.hh  makefile  rcs_fc.cpp  rcs_fc.hh
modules/hello_world/: hello.c  hello.h  makefile
modules/libmathutils/: CMakeLists.txt
modules/libmathutils/include/mathutils/: matrix_tool.hh  nrutil.hh  stochastic.hh
modules/libmathutils/src/: integrate.cpp  matrix_tool.cpp  nrutil.cpp  stochastic.cpp
modules/math_tools/: dm_delta_ut.hh  integrate.hh  makefile  matrix_tool.cpp  matrix_tool.hh  numerical_constants.hh  stochastic.cpp
modules/math_utils/: CMakeLists.txt  dm_delta_ut.hh  earth_coeff.hh  integrate.cpp  integrate.hh  makefile  matrix_tool.cpp  matrix_tool.hh  nrutil.c  nrutil.cpp  nrutil.hh  stochastic.hh
modules/misc_utils/: CMakeLists.txt  makefile  misc_utils.c  misc_utils.h
modules/navigation/: ins.cpp  ins.h  makefile  navigation.cpp  navigation.h  sensor_calibration.cpp  sensor_calibration.h
modules/navigation/tests/: CMakeLists.txt  INS0_Export.csv  gtest.cpp  navigation_tests.cpp  navigation_tests.h
modules/ringbuffer/: makefile  ringbuffer.c  ringbuffer.h
modules/ringbuffer/tests/: CMakeLists.txt  gtest.cpp  integration_test_cases.cpp  ringbuffer_tests.cpp  ringbuffer_tests.h  tests_ringbuffer.cpp
modules/sensor_dm/: makefile
scripts/: ci_test.py  gen_dut1.py  generate_error.py  pre-commit.hook
sim_exe/egse_dm/: S_define  S_overrides.mk  dcm_bind.cfg
sim_exe/fsw_gnc/: S_define  S_overrides.mk  dcm_client_bind.cfg  dcm_client_channel.cfg  dcm_client_ring.cfg
sim_exe/http3a_dm/: S_overrides.mk  dcm_channel.cfg
sim_exe/http3a_gnc/: S_overrides.mk  dcm_client_bind.cfg  dcm_client_channel.cfg  dcm_client_ring.cfg
sim_exe/sample_client/: S_define  S_overrides.mk
sim_exe/sample_code/: S_define  S_overrides.mk  dcm_channel.cfg  dcm_ring.cfg
sim_exe/sample_master/: dcm_bind.cfg  dcm_channel.cfg  dcm_ring.cfg
sim_exe/sample_slave/: S_overrides.mk  dcm_client_bind.cfg  dcm_client_channel.cfg  dcm_client_ring.cfg
sim_exe/sheipa_dm/: S_define  S_overrides.mk
sim_exe/sheipa_gnc/: S_define  S_overrides.mk  dcm_client_channel.cfg
sim_exe/skyline_dm/: S_define  S_overrides.mk  (+2 more)
tables/: Aero_0721_S2+S3.txt  Aero_0721_S3.txt  Aero_20180510_S2+S3.txt  Aero_20180510_S3.txt  Aero_20180629_S2+S3.txt  Aero_20180629_S3.txt  Aero_Insertion_S1.txt  Aero_Insertion_S2.txt  Aero_Insertion_S3.txt  Prop_0521_S2+S3.txt  Prop_0521_S3.txt  aero_table.txt  aero_table_slv1.txt  aero_table_slv2.txt  aero_table_slv3.txt  brdc0470.17n  brdc0810.17n  weather_table.txt
tools/: plot.py
(+34 files in other folders)
